docs: blogs updated

--- a/blogs.html
+++ b/blogs.html
@@ -25,5 +25,39 @@
     <header class="hero">
         <h1 class="hero-heading">My <span style="color: var(--primary-color);">Blogs</span></h1>
     </header>
+
+    <main>
+        <article>
+            <ul class="list-non-bullet" >
+                <li>
+                    <div class="container container-center">
+                        <a class="blog-links" href="/blog1.html" target="_blank" rel="noopener noreferrer">
+                            <h1 class="blog-heading">What is HLD and LLD in system design? </h1>
+                            <small class="blog-date">October28, 2023</small>
+                            <p class="blog-shortDescription">System design architecture can be depicted as High-Level Design(HLD) or Low-LevelDesign(LLD). Let's look at what they signify.</p>
+                        </a>
+                    </div>
+                </li>
+                <li class="margin-md">
+                    <div class="container container-center">
+                        <a class="blog-links" href="/blog2.html" target="_blank" rel="noopener noreferrer">
+                            <h1 class="blog-heading">What is HLD and LLD in system design</h1>
+                            <small class="blog-date">October28, 2023</small>
+                            <p class="blog-shortDescription">System design architecture can be depicted as High-Level Design(HLD) or Low-LevelDesign(LLD). Let's look at what they signify.</p>
+                        </a>
+                    </div>
+                </li>
+                <li class="margin-md">
+                    <div class="container container-center">
+                        <a class="blog-links" href="/blog3.html" target="_blank" rel="noopener noreferrer">
+                            <h1 class="blog-heading">What is HLD and LLD in system design</h1>
+                            <small class="blog-date">October28, 2023</small>
+                            <p class="blog-shortDescription">System design architecture can be depicted as High-Level Design(HLD) or Low-LevelDesign(LLD). Let's look at what they signify.</p>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </article>
+    </main>
 </body>
 </html>
